--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    font-family: "LiHei Pro Medium", "Hiragino Sans GB", "Helvetica Neue", Arial, sans-serif
     margin: 0;
     font-size: 2em;
     width: 100%;
