implemented interactive change:  1. Click an option, show right or wrong immediately; and  2. A "next" button in the answer area.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -85,3 +85,15 @@ div.optionBox {
 span.optionTag {
     margin-right: 0.5em;
 }
+
+span.CorrectnessSign-correct {
+    color: green;
+}
+
+span.CorrectnessSign-wrong {
+    color: darkred;
+}
+
+button#next {
+    font-size: 1em;
+}
