--- a/styles/main.css
+++ b/styles/main.css
@@ -15,7 +15,7 @@ input[type=checkbox] {
     margin: 1em;
 }
 
-div#Card {
+div#Card, div#ScorePage {
     margin: 0 auto;
     background-repeat: repeat;
 }
@@ -35,6 +35,11 @@ span.Explanation {
     div#Card {
         width: 1036px;
     }
+}
+
+button.share {
+    display: block;
+    font-size: 1em;
 }
 
 div#Banner {
@@ -72,7 +77,7 @@ span.CorrectnessSign-wrong {
     color: darkred;
 }
 
-button {
+button#next {
     font-size: 1em;
     border: 2px solid black;
     background: white;
