--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -4,8 +4,7 @@ body {
     font-size: 3em;
     width: 100%;
     height: 100%;
-    background-image: url(../img/background.png);
-    background-repeat: repeat;
+    background: url(../img/background.png) repeat;
 }
 
 input[type=checkbox] {
@@ -15,7 +14,7 @@ input[type=checkbox] {
     margin: 1em;
 }
 
-div#Card {
+div#Card, div#ScorePage {
     margin: 0 auto;
     background-repeat: repeat;
 }
@@ -32,9 +31,21 @@ span.Explanation {
 }
 
 @media (min-device-width: 1036px) {
-    div#Card {
+    div#Card, div#ScorePage {
         width: 1036px;
     }
+}
+
+button.share {
+    font-size: 1em;
+    display: block;
+    width: 12em;
+    text-align: center;
+    margin-bottom: 0.5em;
+}
+
+button.share img {
+    vertical-align: text-bottom;
 }
 
 div#Banner {
@@ -123,4 +134,17 @@ img.insertImageWide {
 
 div#questionText {
     line-height: 1.5;
+}
+
+div#marketingInfobox {
+    font-size: 0.6em;
+    margin-top: 1em;
+}
+
+div#ScorePage h1 {
+    margin-bottom: 0;
+}
+
+div#ScorePage span {
+    margin-top: 0.5em;
 }
