--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "LiHei Pro Medium", "Hiragino Sans GB", "Helvetica Neue", Arial, sans-serif
+    font-family: "LiHei Pro Medium", "Hiragino Sans GB", "Helvetica Neue", Arial, sans-serif;
     margin: 0;
     font-size: 3em;
     width: 100%;
