--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -6,9 +6,9 @@ body {
   width: 100%;
   height: 100%;
   background: url(../img/background.png) repeat; }
-  @media screen and (max-height: 900) {
+  @media screen and (min-device-width: 1000px) {
     body {
-      font-size: 2.2em; } }
+      font-size: 2em; } }
   body #Card #Banner {
     text-align: center;
     width: 100%; }
@@ -55,6 +55,9 @@ body {
         body #Card #QuestionPanel #OptionPanel .optionBox label .optionBoxRightContainer {
           float: left;
           width: 60%; }
+    @media screen and (min-width: 1000px) {
+      body #Card #QuestionPanel #OptionPanel .optionBox {
+        margin-top: 0.5em; } }
     body #Card #QuestionPanel #OptionPanel .optionBoxWithImage {
       display: inline-block;
       width: 45%;
@@ -80,18 +83,17 @@ body {
         color: #FF0000;
         margin-left: 5px; }
     body #Card #AnswerPanel .ExplanationBox {
-      background: url(../img/ExplanationBox-border.png) no-repeat;
-      background-size: 100% 100%;
+      border: 5px solid #31AFBE;
       padding: 20px 50px;
-      margin: 2px; }
+      margin: 2px;
+      text-align: left; }
       body #Card #AnswerPanel .ExplanationBox .Explanation {
         line-height: 1.5; }
       body #Card #AnswerPanel .ExplanationBox button#next {
         font-size: 1em;
-        border: 2px solid black;
+        border: 5px solid #31AFBE;
         background: white;
-        float: right;
-        margin-right: 45px;
+        margin-left: 1em;
         border-radius: 5px; }
   body #ScorePage {
     margin: 0 auto;
@@ -115,6 +117,10 @@ body {
 
 @media (min-device-width: 1000px) {
   #Card, #ScorePage {
-    width: 1000px; } }
+    width: 1000px;
+    margin: 0 auto; }
+
+  div.optionBox {
+    margin-top: 0.3em; } }
 
 /*# sourceMappingURL=main.css.map */
