--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,18 +1,20 @@
 $answerTagColor: #FF0000;
 $wrongAnswerSignColor: darkred;
 $correctAnswerSignColor: green;
+$initiumGreen: #31AFBE;
 
 body {
     font-family: "LiHei Pro Medium", "Hiragino Sans GB", "Helvetica Neue", Arial, sans-serif;
     margin: 0;
     padding: 5px;
     font-size: 2.5em;
-    @media screen and (max-height: 900) {
-        font-size: 2.2em;
-    }
     width: 100%;
     height: 100%;
     background: url(../img/background.png) repeat;
+
+    @media screen and (min-device-width: 1000px) {
+        font-size: 2em;
+    }
 
     #Card {
 
@@ -30,7 +32,7 @@ body {
                 font-size: 120%;
                 font-weight: 700;
                 margin-bottom: 0.5em;
-                color: #31AFBE;
+                color: $initiumGreen;
             }
 
             #questionText {
@@ -92,6 +94,13 @@ body {
 
                 }
 
+                @media screen and (min-width: 1000px) {
+                    .optionBox {
+                        margin-top: 0.5em;
+                    }
+
+                }
+
                 .optionBoxWithImage {
                     display: inline-block;
                     width: 45%;
@@ -138,10 +147,12 @@ body {
             }
 
             .ExplanationBox {
-                background: url(../img/ExplanationBox-border.png) no-repeat;
-                background-size: 100% 100%;
+                //background: url(../img/ExplanationBox-border.png) no-repeat;
+                //background-size: 100% 100%;
+                border: 5px solid $initiumGreen;
                 padding: 20px 50px;
                 margin: 2px;
+                text-align: left;
 
                 .Explanation {
                     line-height: 1.5;
@@ -149,10 +160,9 @@ body {
 
                 button#next {
                     font-size: 1em;
-                    border: 2px solid black;
+                    border: 5px solid $initiumGreen;
                     background: white;
-                    float: right;
-                    margin-right: 45px;
+                    margin-left: 1em;
                     border-radius: 5px;
                 }
 
@@ -193,10 +203,14 @@ body {
     }
 }
 
-// For computer screens
+// For wider screens
 @media (min-device-width: 1000px) {
     #Card, #ScorePage {
         width: 1000px;
+        margin: 0 auto;
+    }
+    div.optionBox {
+        margin-top: 0.3em;
     }
 }
 
