--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,6 +9,7 @@ body {
     padding: 5px;
     font-size: 2.5em;
     width: 100%;
+    max-width: 1000px;
     height: 100%;
     background: url(../img/background.png) repeat;
 
@@ -18,9 +19,15 @@ body {
 
     #Card {
 
+        margin: 0 auto;
+
         #Banner {
             text-align: center;
             width: 100%;
+
+            #BannerImage {
+                width: 100%;
+            }
         }
 
         #QuestionPanel {
@@ -205,12 +212,3 @@ body {
 
     }
 }
-
-// For wider screens
-@media (min-device-width: 1000px) {
-    #Card, #ScorePage {
-        width: 50%;
-        margin: 0 auto;
-    }
-}
-
