--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -4,122 +4,159 @@ body {
   padding: 5px;
   font-size: 2.5em;
   width: 100%;
+  max-width: 1000px;
   height: 100%;
-  background: url(../img/background.png) repeat; }
-  @media screen and (min-device-width: 1000px) {
-    body {
-      font-size: 2em; } }
-  body #Card #Banner {
-    text-align: center;
-    width: 100%; }
-  body #Card #QuestionPanel {
-    height: 60%;
-    padding: 1em 0.1em;
-    width: 100%; }
-    body #Card #QuestionPanel #questionTag {
-      font-size: 120%;
-      font-weight: 700;
-      margin-bottom: 0.5em;
-      color: #31AFBE; }
-    body #Card #QuestionPanel #questionText {
-      line-height: 1.5; }
-    body #Card #QuestionPanel #OptionPanel .optionBox {
-      margin-top: 1.0em; }
-      body #Card #QuestionPanel #OptionPanel .optionBox label {
-        width: 100%;
-        display: block; }
-        body #Card #QuestionPanel #OptionPanel .optionBox label input[type=checkbox] {
-          transform: scale(2);
-          -webkit-transform: scale(2);
-          vertical-align: text-top;
-          margin: 1em; }
-        body #Card #QuestionPanel #OptionPanel .optionBox label .optionTag {
-          margin-right: 0.5em;
-          color: #FF0000; }
-        body #Card #QuestionPanel #OptionPanel .optionBox label .optionText {
-          font-size: 1.2em; }
-        body #Card #QuestionPanel #OptionPanel .optionBox label .optionTextWithImage {
-          font-size: 0.8em;
-          vertical-align: top;
-          line-height: 1; }
-        body #Card #QuestionPanel #OptionPanel .optionBox label .CorrectnessSign-correct {
-          color: green;
-          vertical-align: top; }
-        body #Card #QuestionPanel #OptionPanel .optionBox label .CorrectnessSign-wrong {
-          color: darkred;
-          vertical-align: top; }
-        body #Card #QuestionPanel #OptionPanel .optionBox label .optionBoxLeftContainer {
-          float: left;
-          width: 10%;
-          line-height: 0.8; }
-        body #Card #QuestionPanel #OptionPanel .optionBox label .optionBoxRightContainer {
-          float: left;
-          width: 60%; }
-    @media screen and (min-width: 1000px) {
-      body #Card #QuestionPanel #OptionPanel .optionBox {
-        margin-top: 0.5em; } }
-    body #Card #QuestionPanel #OptionPanel .optionBoxWithImage {
-      display: inline-block;
-      width: 45%;
-      margin-right: 5%; }
-    body #Card #QuestionPanel #OptionPanel .optionBoxWithImageWide {
-      width: 49%;
-      margin-right: 0; }
-    body #Card #QuestionPanel img.insertImage {
-      float: right;
-      display: block;
-      height: 300px; }
-    body #Card #QuestionPanel img.insertImageWide {
-      position: relative;
-      margin-left: 10%; }
-  body #Card #AnswerPanel {
-    height: 30%;
-    width: 100%;
-    padding: 0.2em auto; }
-    body #Card #AnswerPanel .answerBox .answerInnerBox {
-      text-align: center;
-      font-size: 1.5em; }
-      body #Card #AnswerPanel .answerBox .answerInnerBox .answerTag {
-        color: #FF0000;
-        margin-left: 5px; }
-    body #Card #AnswerPanel .ExplanationBox {
-      border: 5px solid #31AFBE;
-      padding: 20px 50px;
-      margin: 2px;
-      text-align: left;
-      overflow: hidden; }
-      body #Card #AnswerPanel .ExplanationBox .Explanation {
-        line-height: 1.5; }
-      body #Card #AnswerPanel .ExplanationBox button#next {
-        font-size: 1em;
-        border: 5px solid #31AFBE;
-        background: white;
-        margin-left: 1em;
-        border-radius: 5px;
-        float: right; }
-  body #ScorePage {
-    margin: 0 auto;
-    background-repeat: repeat;
-    padding: 5px; }
-    body #ScorePage button.share {
-      font-size: 1em;
-      display: block;
-      width: 12em;
-      text-align: center;
-      margin-bottom: 0.5em; }
-      body #ScorePage button.share img {
-        vertical-align: text-bottom; }
-    body #ScorePage h1 {
-      margin-bottom: 0; }
-    body #ScorePage span {
-      margin-top: 0.5em; }
-    body #ScorePage #marketingInfobox {
-      font-size: 0.6em;
-      margin-top: 1em; }
-
-@media (min-device-width: 1000px) {
-  #Card, #ScorePage {
-    width: 50%;
-    margin: 0 auto; } }
+  background: url(../img/background.png) repeat;
+}
+@media screen and (min-device-width: 1000px) {
+  body {
+    font-size: 2em;
+  }
+}
+body #Card {
+  margin: 0 auto;
+}
+body #Card #Banner {
+  text-align: center;
+  width: 100%;
+}
+body #Card #Banner #BannerImage {
+  width: 100%;
+}
+body #Card #QuestionPanel {
+  height: 60%;
+  padding: 1em 0.1em;
+  width: 100%;
+}
+body #Card #QuestionPanel #questionTag {
+  font-size: 120%;
+  font-weight: 700;
+  margin-bottom: 0.5em;
+  color: #31AFBE;
+}
+body #Card #QuestionPanel #questionText {
+  line-height: 1.5;
+}
+body #Card #QuestionPanel #OptionPanel .optionBox {
+  margin-top: 1.0em;
+}
+body #Card #QuestionPanel #OptionPanel .optionBox label {
+  width: 100%;
+  display: block;
+}
+body #Card #QuestionPanel #OptionPanel .optionBox label input[type=checkbox] {
+  transform: scale(2);
+  -webkit-transform: scale(2);
+  vertical-align: text-top;
+  margin: 1em;
+}
+body #Card #QuestionPanel #OptionPanel .optionBox label .optionTag {
+  margin-right: 0.5em;
+  color: #FF0000;
+}
+body #Card #QuestionPanel #OptionPanel .optionBox label .optionText {
+  font-size: 1.2em;
+}
+body #Card #QuestionPanel #OptionPanel .optionBox label .optionTextWithImage {
+  font-size: 0.8em;
+  vertical-align: top;
+  line-height: 1;
+}
+body #Card #QuestionPanel #OptionPanel .optionBox label .CorrectnessSign-correct {
+  color: green;
+  vertical-align: top;
+}
+body #Card #QuestionPanel #OptionPanel .optionBox label .CorrectnessSign-wrong {
+  color: darkred;
+  vertical-align: top;
+}
+body #Card #QuestionPanel #OptionPanel .optionBox label .optionBoxLeftContainer {
+  float: left;
+  width: 10%;
+  line-height: 0.8;
+}
+body #Card #QuestionPanel #OptionPanel .optionBox label .optionBoxRightContainer {
+  float: left;
+  width: 60%;
+}
+@media screen and (min-width: 1000px) {
+  body #Card #QuestionPanel #OptionPanel .optionBox {
+    margin-top: 0.5em;
+  }
+}
+body #Card #QuestionPanel #OptionPanel .optionBoxWithImage {
+  display: inline-block;
+  width: 45%;
+  margin-right: 5%;
+}
+body #Card #QuestionPanel #OptionPanel .optionBoxWithImageWide {
+  width: 49%;
+  margin-right: 0;
+}
+body #Card #QuestionPanel img.insertImage {
+  float: right;
+  display: block;
+  height: 300px;
+}
+body #Card #QuestionPanel img.insertImageWide {
+  position: relative;
+  margin-left: 10%;
+}
+body #Card #AnswerPanel {
+  height: 30%;
+  width: 100%;
+  padding: 0.2em auto;
+}
+body #Card #AnswerPanel .answerBox .answerInnerBox {
+  text-align: center;
+  font-size: 1.5em;
+}
+body #Card #AnswerPanel .answerBox .answerInnerBox .answerTag {
+  color: #FF0000;
+  margin-left: 5px;
+}
+body #Card #AnswerPanel .ExplanationBox {
+  border: 5px solid #31AFBE;
+  padding: 20px 50px;
+  margin: 2px;
+  text-align: left;
+  overflow: hidden;
+}
+body #Card #AnswerPanel .ExplanationBox .Explanation {
+  line-height: 1.5;
+}
+body #Card #AnswerPanel .ExplanationBox button#next {
+  font-size: 1em;
+  border: 5px solid #31AFBE;
+  background: white;
+  margin-left: 1em;
+  border-radius: 5px;
+  float: right;
+}
+body #ScorePage {
+  margin: 0 auto;
+  background-repeat: repeat;
+  padding: 5px;
+}
+body #ScorePage button.share {
+  font-size: 1em;
+  display: block;
+  width: 12em;
+  text-align: center;
+  margin-bottom: 0.5em;
+}
+body #ScorePage button.share img {
+  vertical-align: text-bottom;
+}
+body #ScorePage h1 {
+  margin-bottom: 0;
+}
+body #ScorePage span {
+  margin-top: 0.5em;
+}
+body #ScorePage #marketingInfobox {
+  font-size: 0.6em;
+  margin-top: 1em;
+}
 
 /*# sourceMappingURL=main.css.map */
