--- a/styles/main.scss
+++ b/styles/main.scss
@@ -194,11 +194,9 @@ body {
         background-repeat: repeat;
         padding: 5px;
 
-        button.share {
+        .ShareDiv {
             font-size: 1em;
             display: block;
-            width: 12em;
-            text-align: center;
             margin-bottom: 0.5em;
 
             img {
