--- a/styles/main.scss
+++ b/styles/main.scss
@@ -201,6 +201,7 @@ body {
 
             img {
                 vertical-align: text-bottom;
+                margin-right: 10px;
             }
         }
 
