--- a/styles/main.scss
+++ b/styles/main.scss
@@ -194,15 +194,17 @@ body {
         background-repeat: repeat;
         padding: 5px;
 
-        .ShareDiv {
-            font-size: 1em;
-            display: block;
-            margin-bottom: 0.5em;
+        button.share {
+          font-size: 1em;
+          display: block;
+          width: 12em;
+          text-align: center;
+          margin-bottom: 0.5em;
 
-            img {
-                vertical-align: text-bottom;
-                margin-right: 10px;
-            }
+          img {
+            vertical-align: text-bottom;
+          }
+
         }
 
         h1 {
